both of the forms working perfectly crud done for both